<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/back"
    android:orientation="horizontal"
    android:paddingBottom="15dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="20dip" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text=" About"
            android:textColor="@color/title"
            android:textSize="25dp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="left"
            android:text="@string/about_descrip" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingTop="10dip"
            android:text=" Rules"
            android:textColor="@color/title"
            android:textSize="25dp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="left"
            android:text="Land"
            android:textSize="15dp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="#FFFFFF" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="7dp"
            android:gravity="left"
            android:text="@string/land_descrip" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="left"
            android:paddingTop="10dip"
            android:text="Wheat Varieties"
            android:textSize="15dp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="#FFFFFF" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="7dp"
            android:gravity="left"
            android:text="@string/wheat_descrip" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="left"
            android:paddingTop="10dip"
            android:text="Fertilizer"
            android:textSize="15dp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="#FFFFFF" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="7dp"
            android:gravity="left"
            android:text="@string/fert_descrip" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="left"
            android:paddingTop="10dip"
            android:text="Irrigation"
            android:textSize="15dp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="#FFFFFF" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="7dp"
            android:gravity="left"
            android:text="@string/irrigation_descrip" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="left"
            android:paddingTop="10dip"
            android:text="Yield"
            android:textSize="15dp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="#FFFFFF" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="7dp"
            android:gravity="left"
            android:text="@string/yield_descrip" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="left"
            android:paddingTop="10dip"
            android:text="Labour"
            android:textSize="15dp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="#FFFFFF" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="7dp"
            android:gravity="left"
            android:text="@string/labour_descrip" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="left"
            android:paddingTop="10dip"
            android:text="Labour Requirements"
            android:textSize="15dp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="#FFFFFF" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="7dp"
            android:gravity="left"
            android:text="@string/labourReq_descrip" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="left"
            android:paddingTop="10dip"
            android:text="Consumption"
            android:textSize="15dp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="#FFFFFF" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="7dp"
            android:gravity="left"
            android:text="@string/consumption_descrip" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="left"
            android:paddingTop="10dip"
            android:text="How to Conduct Transactions"
            android:textSize="15dp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="#FFFFFF" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="7dp"
            android:gravity="left"
            android:text="@string/trans_descrip" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="left"
            android:paddingTop="10dip"
            android:text="Sequence of Play"
            android:textSize="15dp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="#FFFFFF" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginBottom="20dip"
            android:layout_marginLeft="7dp"
            android:gravity="left"
            android:text="@string/seqOfPlay_descrip" />

        <Button
            android:id="@+id/buttonBack"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dip"
            android:layout_marginTop="15dip"
            android:gravity="center"
            android:text="Back"
            android:textSize="25dp" />
    </LinearLayout>

</ScrollView>